# lakitu

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
crates/lakitu/: Cargo.toml  DESIGN.md  README.md
crates/lakitu-mcp/: Cargo.toml  README.md
crates/lakitu-mcp/assets/hooks/: context-statusline.sh  inbox-check.sh  persona-sessionstart.sh
crates/lakitu-mcp/assets/skill/fleet-coordination/: SKILL.md
crates/lakitu-mcp/assets/web/: app.css  app.js
crates/lakitu-mcp/src/: daemon.rs  fleet.rs  install.rs  main.rs  persona.rs  rest.rs  server.rs  web.rs  wire.rs
crates/lakitu/assets/hooks/: context-statusline.sh  inbox-check.sh  persona-sessionstart.sh  state-hook.sh  tasks-sessionstart.sh
crates/lakitu/assets/skill/fleet-coordination/: SKILL.md
crates/lakitu/assets/web/: app.css  app.js
crates/lakitu/src/: app.rs  client.rs  code_index.rs  daemon.rs  event.rs  fleet.rs  gh.rs  install.rs  lib.rs  log.rs  main.rs  paths.rs  persona.rs  remote.rs  server.rs  store.rs  ui.rs  web.rs  wire.rs  work.rs
deploy/: REMOTE.md  com.lakitu.daemon.plist
docs/: one-binary.md  shared-tasks.md  wrapped-github.md
scripts/: install-fleet.sh
