[package]
name = "lakitu-mcp"
description = "MCP server + coordination daemon for a fleet of Claude Code agents (presence, inbox, tasks, personas, GitHub board automation)"
readme = "README.md"
keywords = ["mcp", "claude", "agents", "coordination", "daemon"]
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "sync", "time", "net", "signal"] }
tokio-util = "0.7"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
maud = "0.27.0"
