[package]
name = "lakitu"
description = "Live TUI cockpit for a fleet of coordinating Claude Code agents"
readme = "README.md"
keywords = ["tui", "claude", "agents", "mcp", "dashboard"]
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time", "process"] }
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webbrowser = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
base64 = "0.22"
ratatui-image = "8"
